fixed some spacing

--- a/src/components/BrandDisplay/styles.css
+++ b/src/components/BrandDisplay/styles.css
@@ -1,7 +1,7 @@
 #naim-brand {
   background-image: url('../../assets/images/brands/naim_audio.png');
   background-position-x: -300px;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 110px);
 }
 
 #focal-brand {
